# python-project-83

./: .env.example  .gitignore  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: build.yaml
page_analyzer/: __init__.py  app.py  db.py  parser.py  utils.py
page_analyzer/templates/: all_urls_page.html  index.html
page_analyzer/templates/layout/: default.html
tests/: test_page_analyzer.py  test_parser.py  test_utils.py
