[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["AlloKuz <a.o.kuzmin.rus@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
flake8 = "^7.1.0"
gunicorn = "^22.0.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
